removed some leadning slashes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -17,7 +17,7 @@
     <!-- header -->
 
     <section id="header">
-      <a href="#"><img src="/assets/logo_header.png" id="logo" /></a>
+      <a href="#"><img src="assets/logo_header.png" id="logo" /></a>
       <ul id="navbar">
         <li><a class="active" href="index.html">Home</a></li>
         <li><a href="shop.html">Shop</a></li>
@@ -51,6 +51,6 @@
 	  <div id="hero_img"></div>
     </section>
 
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
