added featured product section

--- a/index.html
+++ b/index.html
@@ -51,6 +51,85 @@
 	  <div id="hero_img"></div>
     </section>
 
+    <section id="featured_products" class="section-p1">
+      <h2>Featured Products</h2>
+      <p>Find the products below</p>
+      <div class="product_container">
+        <div class="product">
+          <img src="assets/fe-prod-02.jpg">
+          <div class="product_description">
+            <span class="product_category">Gypsum</span>
+            <h5 class="product_name">name</h5>
+            <h4 class="product_price">BDT 150</h4>
+          </div>
+          <a href="#"><i class="fa-solid fa-cart-plus product_cart"></i></a>
+        </div>
+        <div class="product">
+          <img src="assets/fe-prod-02.jpg">
+          <div class="product_description">
+            <span class="product_category">candle</span>
+            <h5 class="product_name">Flower Candle inside a Juwellery Box</h5>
+            <h4 class="product_price">BDT 150</h4>
+          </div>
+          <a href="#"><i class="fa-solid fa-cart-plus product_cart"></i></a>
+        </div>
+        <div class="product">
+          <img src="assets/fe-prod-02.jpg">
+          <div class="product_description">
+            <span class="product_category">Gypsum</span>
+            <h5 class="product_name">Pumpkin</h5>
+            <h4 class="product_price">BDT 150</h4>
+          </div>
+          <a href="#"><i class="fa-solid fa-cart-plus product_cart"></i></a>
+        </div>
+        <div class="product">
+          <img src="assets/fe-prod-02.jpg">
+          <div class="product_description">
+            <span class="product_category">Gypsum</span>
+            <h5 class="product_name">Pumpkin</h5>
+            <h4 class="product_price">BDT 150</h4>
+          </div>
+          <a href="#"><i class="fa-solid fa-cart-plus product_cart"></i></a>
+        </div>
+        <div class="product">
+          <img src="assets/fe-prod-02.jpg">
+          <div class="product_description">
+            <span class="product_category">Gypsum</span>
+            <h5 class="product_name">Pumpkin</h5>
+            <h4 class="product_price">BDT 150</h4>
+          </div>
+          <a href="#"><i class="fa-solid fa-cart-plus product_cart"></i></a>
+        </div>
+        <div class="product">
+          <img src="assets/fe-prod-02.jpg">
+          <div class="product_description">
+            <span class="product_category">Gypsum</span>
+            <h5 class="product_name">Pumpkin</h5>
+            <h4 class="product_price">BDT 150</h4>
+          </div>
+          <a href="#"><i class="fa-solid fa-cart-plus product_cart"></i></a>
+        </div>
+        <div class="product">
+          <img src="assets/fe-prod-02.jpg">
+          <div class="product_description">
+            <span class="product_category">Gypsum</span>
+            <h5 class="product_name">Pumpkin</h5>
+            <h4 class="product_price">BDT 150</h4>
+          </div>
+          <a href="#"><i class="fa-solid fa-cart-plus product_cart"></i></a>
+        </div>
+        <div class="product">
+          <img src="assets/fe-prod-02.jpg">
+          <div class="product_description">
+            <span class="product_category">Gypsum</span>
+            <h5 class="product_name">Pumpkin</h5>
+            <h4 class="product_price">BDT 150</h4>
+          </div>
+          <a href="#"><i class="fa-solid fa-cart-plus product_cart"></i></a>
+        </div>
+      </div>
+    </section>
+
     <script src="js/script.js"></script>
   </body>
 </html>
