--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <p>Find the products below</p>
       <div class="product_container">
         <div class="product">
-          <img src="assets/fe-prod-02.jpg">
+          <img onclick="window.location.href='#'" src="assets/fe-prod-02.jpg">
           <div class="product_description">
             <span class="product_category">Gypsum</span>
             <h5 class="product_name">name</h5>
@@ -119,7 +119,7 @@
           <a href="#"><i class="fa-solid fa-cart-plus product_cart"></i></a>
         </div>
         <div class="product">
-          <img src="assets/fe-prod-02.jpg">
+          <img onclick="window.location.href='#'" src="assets/fe-prod-02.jpg">
           <div class="product_description">
             <span class="product_category">Gypsum</span>
             <h5 class="product_name">Pumpkin</h5>
