--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <p>Turning Simple Spaces Into Beautiful Stories.</p>
         <a href="#">Shop now</a>
       </div>
-	  <div id="hero_img"></div>
+      <div id="hero_img"></div>
     </section>
 
     <section id="featured_products" class="section-p1">
@@ -56,7 +56,10 @@
       <p>Find the products below</p>
       <div class="product_container">
         <div class="product">
-          <img onclick="window.location.href='#'" src="assets/fe-prod-02.jpg">
+          <img
+            onclick="window.location.href = '#'"
+            src="assets/fe-prod-02.jpg"
+          />
           <div class="product_description">
             <span class="product_category">Gypsum</span>
             <h5 class="product_name">name</h5>
@@ -65,7 +68,7 @@
           <a href="#"><i class="fa-solid fa-cart-plus product_cart"></i></a>
         </div>
         <div class="product">
-          <img src="assets/fe-prod-02.jpg">
+          <img src="assets/fe-prod-02.jpg" />
           <div class="product_description">
             <span class="product_category">candle</span>
             <h5 class="product_name">Flower Candle inside a Juwellery Box</h5>
@@ -74,7 +77,7 @@
           <a href="#"><i class="fa-solid fa-cart-plus product_cart"></i></a>
         </div>
         <div class="product">
-          <img src="assets/fe-prod-02.jpg">
+          <img src="assets/fe-prod-02.jpg" />
           <div class="product_description">
             <span class="product_category">Gypsum</span>
             <h5 class="product_name">Pumpkin</h5>
@@ -83,7 +86,7 @@
           <a href="#"><i class="fa-solid fa-cart-plus product_cart"></i></a>
         </div>
         <div class="product">
-          <img src="assets/fe-prod-02.jpg">
+          <img src="assets/fe-prod-02.jpg" />
           <div class="product_description">
             <span class="product_category">Gypsum</span>
             <h5 class="product_name">Pumpkin</h5>
@@ -92,7 +95,7 @@
           <a href="#"><i class="fa-solid fa-cart-plus product_cart"></i></a>
         </div>
         <div class="product">
-          <img src="assets/fe-prod-02.jpg">
+          <img src="assets/fe-prod-02.jpg" />
           <div class="product_description">
             <span class="product_category">Gypsum</span>
             <h5 class="product_name">Pumpkin</h5>
@@ -101,7 +104,7 @@
           <a href="#"><i class="fa-solid fa-cart-plus product_cart"></i></a>
         </div>
         <div class="product">
-          <img src="assets/fe-prod-02.jpg">
+          <img src="assets/fe-prod-02.jpg" />
           <div class="product_description">
             <span class="product_category">Gypsum</span>
             <h5 class="product_name">Pumpkin</h5>
@@ -110,7 +113,7 @@
           <a href="#"><i class="fa-solid fa-cart-plus product_cart"></i></a>
         </div>
         <div class="product">
-          <img src="assets/fe-prod-02.jpg">
+          <img src="assets/fe-prod-02.jpg" />
           <div class="product_description">
             <span class="product_category">Gypsum</span>
             <h5 class="product_name">Pumpkin</h5>
@@ -119,7 +122,10 @@
           <a href="#"><i class="fa-solid fa-cart-plus product_cart"></i></a>
         </div>
         <div class="product">
-          <img onclick="window.location.href='#'" src="assets/fe-prod-02.jpg">
+          <img
+            onclick="window.location.href = '#'"
+            src="assets/fe-prod-02.jpg"
+          />
           <div class="product_description">
             <span class="product_category">Gypsum</span>
             <h5 class="product_name">Pumpkin</h5>
@@ -128,6 +134,43 @@
           <a href="#"><i class="fa-solid fa-cart-plus product_cart"></i></a>
         </div>
       </div>
+    </section>
+
+    <section id="footer" class="section-p1">
+      <div class="footer_column footer_contact">
+        <img src="assets/logo_footer.png" />
+        <h4>Contact</h4>
+        <p><strong>Adress: </strong> &nbsp; Mirpur 07, Dhaka 1216</p>
+        <p><strong>Phone: </strong> &nbsp; 01607311921</p>
+        <p><strong>Hours: </strong> &nbsp; 10:00 AM - 12:00 AM</p>
+      </div>
+      <div class="footer_column footer_social_link">
+        <h4>Follow us</h4>
+        <div class="footer_social_media_icon">
+          <a href=""><i class="fa-brands fa-facebook"></i></a>
+          <a href=""><i class="fa-brands fa-youtube"></i></a>
+          <a href=""><i class="fa-brands fa-instagram"></i></a>
+        </div>
+      </div>
+      <div class="footer_column footer_about">
+        <h4>About</h4>
+        <p>About Us</p>
+        <p>Privacy Policy</p>
+        <p>Terms & Condition</p>
+        <p>Return Policy</p>
+        <p>Contact Us</p>
+      </div>
+      <div class="footer_column footer_my_account">
+        <h4>My Account</h4>
+        <p>Sign in</p>
+        <p>My Order</p>
+        <p>View Cart</p>
+        <p>Order Status</p>
+        <p>Help</p>
+      </div>
+      <a href="#" class="up_arrow">
+        <i class="fa-solid fa-arrow-up arrow"></i>
+      </a>
     </section>
 
     <script src="js/script.js"></script>
